--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,15 +1,20 @@
 <div
-  class="min-h-screen bg-smoke-950 flex items-center justify-center p-4 bg-gradient-to-b from-smoke-950 to-smoke-900">
-  <div class="max-w-md w-full bg-smoke-900/50 rounded-xl shadow-2xl p-10 border border-smoke-800/50 backdrop-blur-sm">
+  class="min-h-screen flex items-center justify-center p-4 bg-gradient-to-b ">
+  <div class="max-w-md w-full bg-smoke-900/50 rounded-xl shadow-2xl p-8 border border-smoke-800/50 backdrop-blur-sm">
     <!-- Logo -->
-    <div class="flex justify-center mb-8">
-      <img src="logo2.svg" alt="Logo" class="h-32 w-auto transform transition-transform duration-300 hover:scale-105" />
+    <div class="flex justify-center ">
+      <img src="logo_main.svg" alt="Logo" class="h-32 w-auto transform transition-transform duration-300 hover:scale-105" />
     </div>
-
+    
     <!-- Título -->
-    <div class="text-center mb-8">
-      <h1 class="text-4xl font-bold text-white mb-2">Bienvenido</h1>
-      <p class="text-smoke-400 text-lg">Inicia sesión en tu cuenta</p>
+    <div class="text-center ">
+      <h1 class="text-5xl font-bold text-white mb-3 font-quicksand tracking-wide">
+        Nuevo 
+        <span class="bg-gradient-to-r from-peel-400 to-peel-600 text-transparent bg-clip-text">
+          Amanecer
+        </span>
+      </h1>
+      <p class="text-smoke-400 text-lg font-quicksand">Inicia sesión en tu cuenta</p>
     </div>
 
     <!-- Formulario -->
