--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="min-h-screen flex items-center justify-center p-4 bg-gradient-to-b ">
+  class="min-h-screen flex items-center justify-center p-4 bg-gradient-to-b from-smoke-950 to-smoke-950">
   <div class="max-w-md w-full bg-smoke-900/50 rounded-xl shadow-2xl p-8 border border-smoke-800/50 backdrop-blur-sm">
     <!-- Logo -->
     <div class="flex justify-center ">
