--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -2,19 +2,19 @@
 @if (isOpen()) {
   <div 
     class="fixed inset-0 bg-smoke-950/50 backdrop-blur-sm z-40 transition-opacity duration-300 md:hidden"
-    (click)="toggleSidebar()">
+    (click)="_sidebarService.toggle()">
   </div>
 }
 
 <!-- Sidebar -->
 <aside 
-  class="fixed top-0 left-0 z-40 h-full w-64 bg-smoke-950 border-r border-smoke-800 transform transition-transform duration-300"
+  class="fixed top-0 left-0 z-40 h-full w-64  border-r border-smoke-900 transform transition-transform duration-300"
   [class.translate-x-0]="isOpen()"
   [class.translate-x-[-100%]]="!isOpen()">
   
   <!-- Header del sidebar con padding superior para estar debajo del header principal -->
   <div class="pt-[72px]">
-    <div class="p-4 border-b border-smoke-800">
+    <div class="p-4 ">
       <h2 class="text-xl font-semibold text-white">Menú</h2>
     </div>
 
