ui principal app

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
           <li>
             <a 
               [routerLink]="item.route"
-              routerLinkActive="bg-smoke-800 text-white"
+              routerLinkActive="bg-peel-500/50 text-white"
               class="flex items-center space-x-3 p-3 text-smoke-400 hover:text-white hover:bg-smoke-800/50 rounded-lg transition-all duration-200">
               <span [innerHTML]="item.icon"></span>
               <span>{{ item.label }}</span>
