--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -5,7 +5,7 @@
       <!-- Botón hamburguesa (siempre visible) -->
       <button 
         (click)="toggleSidebar()"
-        class="p-2 text-smoke-400 hover:text-white hover:bg-smoke-800/50 rounded-lg ">
+        class="p-2 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg ">
         @if (isOpen()) {
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M18 6 6 18"/><path d="m6 6 12 12"/>
@@ -33,7 +33,7 @@
     <div class="flex items-center space-x-3">
       <!-- Botón de notificaciones -->
       <button 
-        class="relative p-2.5 text-smoke-400 hover:text-white hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
+        class="relative p-2.5 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
         (click)="toggleNotifications()">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"/>
@@ -46,7 +46,7 @@
 
       <!-- Botón de configuración -->
       <button 
-        class="p-2.5 text-smoke-400 hover:text-white hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
+        class="p-2.5 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
         (click)="toggleSettings()">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/>
@@ -66,7 +66,7 @@
           <circle cx="12" cy="10" r="4"/>
           <circle cx="12" cy="12" r="10"/>
         </svg>
-        <div class="hidden sm:block text-left">
+        <div class="hidden md:block text-left">
           <p class="text-sm font-medium text-white">{{ userName() }}</p>
           <p class="text-xs text-smoke-400">{{ userRole() }}</p>
         </div>
