--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -4,9 +4,9 @@
     <div class="flex items-center space-x-4">
       <!-- Botón hamburguesa (siempre visible) -->
       <button 
-        (click)="toggleSidebar()"
+        (click)="_sidebarService.toggle()"
         class="p-2 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg ">
-        @if (isOpen()) {
+        @if (_sidebarService.isOpen()) {
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M18 6 6 18"/><path d="m6 6 12 12"/>
           </svg>
@@ -34,7 +34,7 @@
       <!-- Botón de notificaciones -->
       <button 
         class="relative p-2.5 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
-        (click)="toggleNotifications()">
+        >
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"/>
           <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0"/>
@@ -47,7 +47,7 @@
       <!-- Botón de configuración -->
       <button 
         class="p-2.5 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
-        (click)="toggleSettings()">
+      >
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/>
           <circle cx="12" cy="12" r="3"/>
@@ -60,7 +60,7 @@
       <!-- Perfil de usuario -->
       <button 
         class="flex items-center space-x-3 p-2 text-smoke-400 hover:text-peel-500 hover:bg-smoke-800/50 rounded-lg transition-all duration-200"
-        (click)="toggleProfile()">
+     >
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M18 20a6 6 0 0 0-12 0"/>
           <circle cx="12" cy="10" r="4"/>
