--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,18 +1,15 @@
 @if (showOverlay()) {
-  <div 
-    class="fixed inset-0 bg-smoke-950/50 backdrop-blur-sm z-40 transition-opacity duration-300"
-    (click)="_sidebarService.toggle()">
-  </div>
+<div class="fixed inset-0 bg-smoke-950/50 backdrop-blur-sm z-40 transition-opacity duration-300"
+  (click)="_sidebarService.toggle()">
+</div>
 }
 
-<aside
-class="fixed top-0 left-0 z-40 h-full w-64 border-r border-smoke-900 transform transition-transform duration-300"
-[class.translate-x-0]="_sidebarService.isOpen()" 
-[class.translate-x-[-100%]]="!_sidebarService.isOpen()">
-<div class="pt-[72px]">
-  <div class="p-4">
-    <h2 class="text-xl font-semibold text-white">Menú</h2>
+<aside class="fixed top-0 left-0 z-40 h-full w-64 border-r border-smoke-900 transform transition-transform duration-300"
+  [class.translate-x-0]="_sidebarService.isOpen()" [class.translate-x-[-100%]]="!_sidebarService.isOpen()">
+  <div class="pt-[72px]">
+    <div class="p-4">
+      <h2 class="text-xl font-semibold text-white">Menú</h2>
+    </div>
+    <app-sidebar-items></app-sidebar-items>
   </div>
-  <app-sidebar-items></app-sidebar-items>
-</div>
 </aside>
