mobile tab components

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -19,5 +19,7 @@
       </div>
     </main>
   </div>
-  <app-tab></app-tab>
+  @if (_screenService.isMobile()) {
+    <app-tab></app-tab>
+  }
 </div>
