--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
     <form class="space-y-7" [formGroup]="form()" (ngSubmit)="onSubmit()">
       <!-- Campo de usuario -->
       <div>
-        <label for="user" class="block text-sm font-medium text-smoke-300 mb-1.5">
+        <label for="username" class="block text-sm font-medium text-smoke-300 mb-1.5">
           Usuario
         </label>
         <div class="relative group">
@@ -34,13 +34,13 @@
                 <path d="M20 21a8 8 0 1 0-16 0" />
               </svg>
             </div>
-            <input type="text" id="user" formControlName="user"
+            <input type="text" id="username" formControlName="username"
               class="w-full pl-10 pr-4 py-3 bg-smoke-800/50 border border-smoke-700/50 text-white rounded-lg focus:ring-2 focus:ring-peel-500 focus:border-transparent outline-none transition-all duration-200 placeholder-smoke-500 hover:border-peel-500"
               placeholder="Ingresa tu usuario" />
           </div>
-          @if (isFieldInvalid('user')) {
+          @if (isFieldInvalid('username')) {
           <span class="mt-1 text-sm text-red-500">
-            {{ getErrorMessage('user') }}
+            {{ getErrorMessage('username') }}
           </span>
           }
         </div>
