--- a/src/app/pages/admin/usuario/ui/user-list/user-list.component.html
+++ b/src/app/pages/admin/usuario/ui/user-list/user-list.component.html
@@ -21,13 +21,10 @@
                 <tr class="hover:bg-smoke-900 transition-colors">
                   <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.id}}</td>
                   <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.nombreComercial}}</td>
-                  <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-300 hidden sm:table-cell"
+                  <td [class]="'px-4 md:px-6 py-4 text-xs md:text-sm  hidden sm:table-cell' + (datos.telefono == null ? ' text-peel-300 font-medium' : ' text-smoke-300 font-medium')">{{datos.telefono || 'No registrado'}}</td>
 
-                  [class] = "datos.telefono == null ? 'text-peel-300 font-medium' : 'text-smoke-300 font-medium'"
-                  >{{datos.telefono || 'No registrado'}}</td>
-                  <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-300 hidden md:table-cell"
-                  [class] = "datos.cedula == null ? 'text-peel-300 font-medium' : 'text-smoke-300 font-medium'"
-                  >{{datos.cedula || 'No registrado'}}</td>
+                  <td [class]="'px-4 md:px-6 py-4 text-xs md:text-sm  hidden md:table-cell' + (datos.cedula == null ? ' text-peel-300 font-medium' : ' text-smoke-300 font-medium')">{{datos.cedula || 'No registrado'}}</td>
+                  
                   <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.rol.nombre}}</td>
                   <td class="px-4 md:px-6 py-4">
                     <span class="px-2 md:px-3 py-1 text-xs font-medium rounded-full bg-peel-900 text-peel-300"
@@ -53,7 +50,7 @@
         <div class="p-6">
           <div class="flex items-center justify-between mb-4">
             <div class="flex items-center space-x-3">
-              <div class="h-12 w-12 rounded-full bg-peel-900 flex items-center justify-center">
+              <div class="h-12 w-12 rounded-full bg-peel-950 flex items-center justify-center">
                 <span class="text-peel-300 text-xl font-bold">GR</span>
               </div>
               <div>
