--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -13,7 +13,7 @@
       [class.ml-64]="sidebarService.isOpen()"
       [class.ml-0]="!sidebarService.isOpen()"
     >
-      <div class="p-4">
+      <div class="">
       
         <router-outlet></router-outlet>
       </div>
